# rust-scoped-pool

./: .travis.yml  Cargo.toml  README.md
examples/: quicksort.rs
src/: lib.rs
