[package]

name = "scoped-pool"
version = "1.0.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-scoped-pool.git"
description = "A flexible thread pool providing scoped threads."
readme = "README.md"
license = "MIT"

[dependencies]
variance = "0.1"
crossbeam = "0.2"
scopeguard = "0.1"

[dev-dependencies]
rand = "0.3"
itertools = "0.4"

