[package]

name = "scoped-pool"
version = "1.1.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
repository = "https://github.com/reem/rust-scoped-pool.git"
description = "A flexible thread pool providing scoped threads."
readme = "README.md"
license = "MIT"

[dependencies]
variance = "0.1.3"
crossbeam-channel = "0.3.8"
scopeguard = "1.0.0"

[dev-dependencies]
rand = "0.6.5"
itertools = "0.8.0"
